--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/preact": "^3.1.2",
     "@astrojs/rss": "^4.0.5",
+    "@swup/astro": "^1.4.0",
     "astro": "^4.5.15",
     "preact": "^10.20.1"
   }
